--- a/blog.html
+++ b/blog.html
@@ -3,8 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Staging Template">
-    <meta name="keywords" content="Staging, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AYZ İNŞAAT</title>
@@ -53,34 +51,43 @@
                         <a href="#"><img src="img/logo.png" alt=""></a>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-8">
                     <nav class="header__menu mobile-menu">
                         <ul>
                             <li><a href="./index.html">Anasayfa</a></li>
                             <li><a href="./about.html">Hakkımızda</a></li>
-                            <li><a href="./galeri.html">Galeri</a></li>
-                            <li><a href="#">Pages</a>
+                            <li><a href="#">Makine Parkı ve Galeri</a>
                                 <ul class="dropdown">
-                                    <li><a href="./Project-details.html">Project Details</a></li>
-                                    <li><a href="./about.html">About</a></li>
-                                    <li><a href="./services.html">Services</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
+                                    <li><a href="#">Makine Parkı</a></li>
+                                    <li><a href="galeri.html">Galeri</a></li>
                                 </ul>
                             </li>
-                            <li class="active"><a href="./blog.html">Basında Biz</a></li>
+                            <li><a href="#">Projeler</a>
+                                <ul class="dropdown">
+                                    <li><a href="./Project-details.html">Projeler </a></li>
+                                    <li><a href="./services.html">hizmetlerimiz</a></li>
+                                </ul>
+                            </li>
+                            <li class="active"><a href="#">Basında Biz</a>
+                                <ul class="dropdown">
+                                    <li><a href="/AYZ-/blog.html">Haberler</a></li>
+                                    <li><a href="./blog-details.html">Bülten</a></li>
+                                </ul>
+                            </li>
                             <li><a href="./contact.html">İletişim</a></li>
                         </ul>
                     </nav>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-1">
                     <div class="header__widget">
                         <a href="about.html">
                             <img src="img/tr.png" alt="Türk Bayrağı" style="width:100px; ">
                         </a>
                     </div>
                 </div>
-                <div class="canvas__open"><i class="fa fa-bars"></i></div>
             </div>
+            <div class="canvas__open"><i class="fa fa-bars"></i></div>
+        </div>
     </header>
     <!-- Header Section End -->
 
@@ -118,52 +125,32 @@
                     <div class="blog__item__list">
                         <div class="blog__item">
                             <ul>
-                                <li>December 20, 2019 </li>
-                                <li>By John Doe</li>
-                                <li>Planning</li>
+                                <li>20 Mayıs 2023 </li>
+                                <li>Tunahan Akdere</li>
+                                <li>Bilgi</li>
                             </ul>
-                            <h2>Target and Amazon Shopping List for Home Stagers</h2>
-                            <img src="img/blog/blog-1.jpg" alt="">
+                            <h2>ATEŞ İNŞAAT - MEDYA</h2>
+
+                            <img src="img/ayz/ates-insaat-09.jpg" alt="">
                             <div class="blog__item__text">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                     incididunt ut labore et dolore magna aliqua. Risus commodo viverra maecenas accumsan
-                                    lacus vel facilisis. </p>
-                                <a href="#">Read more</a>
-                            </div>
-                        </div>
-                        <div class="blog__item__quote">
-                            <p>“Without question this is the stager you want to use! Jennifer staged a hard to sell home
-                                for me and we sold it fast! …. Jennifer made it possible.”</p>
-                            <span>Martin Lockhart</span>
-                        </div>
-                        <div class="blog__item">
-                            <ul>
-                                <li>December 20, 2019 </li>
-                                <li>By John Doe</li>
-                                <li>Planning</li>
-                            </ul>
-                            <h2>6 Ideas for Team Building & Employee Appreciation for Home Stagers</h2>
-                            <img src="img/blog/blog-2.jpg" alt="">
-                            <div class="blog__item__text">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Risus commodo viverra maecenas accumsan
-                                    lacus vel facilisis. </p>
-                                <a href="#">Read more</a>
+
                             </div>
                         </div>
                         <div class="blog__item">
                             <ul>
-                                <li>December 20, 2019 </li>
-                                <li>By John Doe</li>
-                                <li>Planning</li>
+                                <li>20 Mayıs 2023 </li>
+                                <li>Tunahan Akdere</li>
+                                <li>Bilgi</li>
                             </ul>
-                            <h2>How to Find the Best Price Structure for Your Home Staging Services</h2>
-                            <img src="img/blog/blog-2.jpg" alt="">
+                            <h2>ATEŞ İNŞAAT - MEDYA 2</h2>
+
+                            <img src="img/ayz/ates-insaat-12.jpg" alt="">
                             <div class="blog__item__text">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
                                     incididunt ut labore et dolore magna aliqua. Risus commodo viverra maecenas accumsan
-                                    lacus vel facilisis. </p>
-                                <a href="#">Read more</a>
+
                             </div>
                         </div>
                     </div>
@@ -180,20 +167,9 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="blog__sidebar">
-                        <div class="blog__sidebar__about">
-                            <img class="author__pic" src="img/blog/blog-about.png" alt="">
-                            <p>Quis ipsum suspendisse ultrices gravid. Risus commodo viverra maece accums lacus vel
-                                facilisis. </p>
-                            <img src="img/blog/signature.png" alt="">
-                        </div>
-                        <div class="blog__sidebar__search">
-                            <form action="#">
-                                <input type="text" placeholder="Searach...">
-                                <button type="submit"><span class="icon_search"></span></button>
-                            </form>
-                        </div>
+
                         <div class="blog__sidebar__categories">
-                            <h5>Categories</h5>
+                            <h5>Kategorİler</h5>
                             <ul>
                                 <li>Work Space</li>
                                 <li>Office Building</li>
@@ -202,61 +178,44 @@
                                 <li>Process</li>
                             </ul>
                         </div>
+                        <br><br><br><br>
                         <div class="blog__sidebar__feature">
-                            <h5>Feature News</h5>
+                            <h5>Öne Çıkan Haberler</h5>
+                            <a href="#" class="blog__sidebar__feature__item">
+                                <div class="blog__sidebar__feature__item__pic">
+                                    <img src="img/ayz/ates-insaat-06.jpg" style="width: 80px;height: 80px;" alt="">
+                                </div>
+                                <div class="blog__sidebar__feature__item__text">
+                                    <span>10 Nisan 202</span>
+                                    <h6>Haber 1</h6>
+                                </div>
+                            </a>
+                            <a href="#" class="blog__sidebar__feature__item">
+                                <div class="blog__sidebar__feature__item__pic">
+                                    <img src="img/ayz/ates-insaat-11.jpg" alt="" style="width: 80px;height: 80px;">
+                                </div>
+                                <div class="blog__sidebar__feature__item__text">
+                                    <span>10 Nisan 202</span>
+                                    <h6>Haber 2</h6>
+                                </div>
+                            </a>
                             <a href="#" class="blog__sidebar__feature__item">
                                 <div class="blog__sidebar__feature__item__pic">
                                     <img src="img/blog/br-1.jpg" alt="">
                                 </div>
                                 <div class="blog__sidebar__feature__item__text">
-                                    <span>December 20, 2019</span>
-                                    <h6>Grace Millane's mother tells killer she died 'terrified</h6>
-                                </div>
-                            </a>
-                            <a href="#" class="blog__sidebar__feature__item">
-                                <div class="blog__sidebar__feature__item__pic">
-                                    <img src="img/blog/br-2.jpg" alt="">
-                                </div>
-                                <div class="blog__sidebar__feature__item__text">
-                                    <span>December 20, 2019</span>
-                                    <h6>A 'gregarious' gap-year student who dreamed.</h6>
-                                </div>
-                            </a>
-                            <a href="#" class="blog__sidebar__feature__item">
-                                <div class="blog__sidebar__feature__item__pic">
-                                    <img src="img/blog/br-3.jpg" alt="">
-                                </div>
-                                <div class="blog__sidebar__feature__item__text">
-                                    <span>December 20, 2019</span>
-                                    <h6>A 'gregarious' gap-year student who dreamed.</h6>
+                                    <span>10 Nisan 202</span>
+                                    <h6>Haber 2</h6>
                                 </div>
                             </a>
                         </div>
-                        <div class="blog__sidebar__tag">
-                            <h5>Tag</h5>
-                            <a href="#">Branding</a>
-                            <a href="#">Office</a>
-                            <a href="#">Creative</a>
-                            <a href="#">Building</a>
-                            <a href="#">Portfolio</a>
-                            <a href="#">Products</a>
-                            <a href="#">Website</a>
-                            <a href="#">Design</a>
-                            <a href="#">Working Space</a>
-                        </div>
+                        <br><br><br><br>
                         <div class="blog__sidebar__social">
-                            <h5>Follow Us</h5>
+                            <h5>Hesaplarımız</h5>
                             <a href="#"><i class="fa fa-facebook"></i></a>
                             <a href="#"><i class="fa fa-twitter"></i></a>
                             <a href="#"><i class="fa fa-instagram"></i></a>
                             <a href="#"><i class="fa fa-linkedin"></i></a>
-                        </div>
-                        <div class="blog__sidebar__newslatter">
-                            <h5>Newslatter</h5>
-                            <form action="#">
-                                <input type="text" placeholder="Your email address">
-                                <button type="submit"><i class="fa fa-location-arrow"></i></button>
-                            </form>
                         </div>
                     </div>
                 </div>
@@ -266,19 +225,21 @@
     <!-- Blog Section End -->
 
     <!-- Footer Section Begin -->
-    <footer class="footer set-bg">
+    <footer class="footer set-bg" data-setbg="img/footer-bg.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="#">LOGO<img src="img/ayz/LOGO.png" alt=""></a>
+                            <a href="#"><img src="img/logo.png" alt=""></a>
                         </div>
-                        <p>Kazım Özalp Mahalesi Rabat Sokak No: 24 / 3 <br /> Kavaklıdere - Çankaya - Ankara - Türkiye
+                        <p>AYZ İnşaat, kaliteli ve güvenilir hizmet anlayışımızla,
+
+                            <br />müşterilerimizin ihtiyaçlarına yönelik çözümler sunuyoruz. Modern tekniklerle,
+                            güvenilir alt yapı projeleri gerçekleştiriyoruz.
                         </p>
                         <ul>
-                            <li>info@ayzinsaat.com</li>
-                            <li>+84 123 456 789</li>
+
                         </ul>
                         <div class="footer__social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
@@ -290,34 +251,38 @@
                 </div>
                 <div class="col-lg-2 offset-lg-1 col-md-3 col-sm-6">
                     <div class="footer__widget">
-                        <h6>Site Haritası</h6>
+                        <h6>SİTE HARİTASI</h6>
                         <ul>
-                            <li><a href="#">Anasayfa</a></li>
-                            <li><a href="#">Hakkımızda</a></li>
-                            <li><a href="#">Galeri</a></li>
-                            <li><a href="#">Projeler</a></li>
-                            <li><a href="#">İletişim</a></li>
+                            <li><a href="#">ANASAYFA</a></li>
+                            <li><a href="#">HAKKIMIZDA</a></li>
+                            <li><a href="#">MAKİNE PARKI</a></li>
+                            <li><a href="#">GALERİ</a></li>
+                            <li><a href="#">PROJELER</a></li>
+                            <li><a href="#">İLETİŞİM</a></li>
+
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-6">
                     <div class="footer__widget">
-                        <h6>Basında Biz</h6>
+                        <h6>HİZMETLER</h6>
                         <ul>
-                            <li><a href="#">Haberler</a></li>
-                            <li><a href="#">Basın Bültenleri</a></li>
+                            <li><a href="#">HİZMET 1</a></li>
+                            <li><a href="#">HİZMET 2</a></li>
+                            <li><a href="#">HİZMET 3</a></li>
+                            <li><a href="#">HİZMET 4</a></li>
                         </ul>
                     </div>
                 </div>
-
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="footer__address">
-                        <h6>İletişim</h6>
-                        <p>Kazım Özalp Mahalesi Rabat Sokak No: 24 / 3 <br /> Kavaklıdere - Çankaya - Ankara - Türkiye
+                        <h6>İLETİŞİM </h6>
+                        <p>Kavaklıdere/Çankaya - Ankara,Türkiye
+                            <br /> Kazım Özalp Mahalesi Rabat Sokak No: 24 / 3
                         </p>
                         <ul>
-                            <li>info@ayzinsaat.com</li>
-                            <li>+84 123 456 789</li>
+                            <li>Info.@gmail.com</li>
+                            <li>90 (312) 491 69 12</li>
                         </ul>
                     </div>
                 </div>
@@ -326,18 +291,18 @@
                 <div class="row">
                     <div class="col-lg-8 col-md-7">
                         <div class="copyright__text">
-                            <p>Copyright ©
+                            <p>Telif hakkı ©
                                 <script>
                                     document.write(new Date().getFullYear());
-                                </script> All rights reserved | This website is made with by <a href="tual.com"
-                                    target="_blank">TU & AL</a>
+                                </script> Tüm hakları saklıdır | <i aria-hidden="true"></i> <a href="#">TU & AL</a>
+                                tarafından yapılmıştır
                             </p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-5">
                         <div class="copyright__widget">
-                            <a href="#">Terms of use</a>
-                            <a href="#">Privacy Policy</a>
+                            <a href="#">Kullanım Şartları</a>
+                            <a href="#">Gizlilik Politikası</a>
                         </div>
                     </div>
                 </div>
