--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Staging Template">
-    <meta name="keywords" content="Staging, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AYZ İNŞAAT</title>
@@ -45,7 +43,7 @@
     <!-- Offcanvas Menu End -->
 
     <!-- Header Section Begin -->
-    <header class="header header-normal set-bg" style="background-color: black;">
+    <header class="header">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-3">
@@ -53,26 +51,34 @@
                         <a href="#"><img src="img/logo.png" alt=""></a>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-8">
                     <nav class="header__menu mobile-menu">
                         <ul>
                             <li><a href="./index.html">Anasayfa</a></li>
                             <li><a href="./about.html">Hakkımızda</a></li>
-                            <li><a href="./galeri.html">Galeri</a></li>
-                            <li><a href="#">Pages</a>
+                            <li><a href="#">Makine Parkı ve Galeri</a>
                                 <ul class="dropdown">
-                                    <li><a href="./Project-details.html">Project Details</a></li>
-                                    <li><a href="./about.html">About</a></li>
-                                    <li><a href="./services.html">Services</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
+                                    <li><a href="#">Makine Parkı</a></li>
+                                    <li><a href="galeri.html">Galeri</a></li>
                                 </ul>
                             </li>
-                            <li><a href="./blog.html">Basında Biz</a></li>
+                            <li><a href="#">Projeler</a>
+                                <ul class="dropdown">
+                                    <li><a href="./Project-details.html">Projeler </a></li>
+                                    <li><a href="./services.html">hizmetlerimiz</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Basında Biz</a>
+                                <ul class="dropdown">
+                                    <li><a href="/AYZ-/blog.html">Haberler</a></li>
+                                    <li><a href="./blog-details.html">Bülten</a></li>
+                                </ul>
+                            </li>
                             <li class="active"><a href="./contact.html">İletişim</a></li>
                         </ul>
                     </nav>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-1">
                     <div class="header__widget">
                         <a href="about.html">
                             <img src="img/tr.png" alt="Türk Bayrağı" style="width:100px; ">
@@ -84,6 +90,31 @@
         </div>
     </header>
     <!-- Header Section End -->
+
+    <!-- Breadcrumb Section Begin -->
+    <div class="breadcrumb-option spad" style="
+background: linear-gradient(
+    rgba(0, 0, 0, 0.4),
+    rgba(0, 0, 0, 0.4)
+  ),
+  url(img/ayz/ates-insaat-10.jpg);
+background-size: cover;
+background-position: center;">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div class="breadcrumb__text">
+                        <h2>İLETİŞİM</h2>
+                        <div class="breadcrumb__links">
+                            <a href="./index.html">ANASAYFA</a>
+                            <span>İLETİŞİM</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Breadcrumb Section End -->
 
     <!-- Contact Section Begin -->
     <section class="contact spad">
@@ -149,19 +180,21 @@
     <!-- Contact Section End -->
 
     <!-- Footer Section Begin -->
-    <footer class="footer set-bg">
+    <footer class="footer set-bg" data-setbg="img/footer-bg.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="#">LOGO<img src="img/ayz/LOGO.png" alt=""></a>
+                            <a href="#"><img src="img/logo.png" alt=""></a>
                         </div>
-                        <p>Kazım Özalp Mahalesi Rabat Sokak No: 24 / 3 <br /> Kavaklıdere - Çankaya - Ankara - Türkiye
+                        <p>AYZ İnşaat, kaliteli ve güvenilir hizmet anlayışımızla,
+
+                            <br />müşterilerimizin ihtiyaçlarına yönelik çözümler sunuyoruz. Modern tekniklerle,
+                            güvenilir alt yapı projeleri gerçekleştiriyoruz.
                         </p>
                         <ul>
-                            <li>info@ayzinsaat.com</li>
-                            <li>+84 123 456 789</li>
+
                         </ul>
                         <div class="footer__social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
@@ -173,34 +206,38 @@
                 </div>
                 <div class="col-lg-2 offset-lg-1 col-md-3 col-sm-6">
                     <div class="footer__widget">
-                        <h6>Site Haritası</h6>
+                        <h6>SİTE HARİTASI</h6>
                         <ul>
-                            <li><a href="#">Anasayfa</a></li>
-                            <li><a href="#">Hakkımızda</a></li>
-                            <li><a href="#">Galeri</a></li>
-                            <li><a href="#">Projeler</a></li>
-                            <li><a href="#">İletişim</a></li>
+                            <li><a href="#">ANASAYFA</a></li>
+                            <li><a href="#">HAKKIMIZDA</a></li>
+                            <li><a href="#">MAKİNE PARKI</a></li>
+                            <li><a href="#">GALERİ</a></li>
+                            <li><a href="#">PROJELER</a></li>
+                            <li><a href="#">İLETİŞİM</a></li>
+
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-6">
                     <div class="footer__widget">
-                        <h6>Basında Biz</h6>
+                        <h6>HİZMETLER</h6>
                         <ul>
-                            <li><a href="#">Haberler</a></li>
-                            <li><a href="#">Basın Bültenleri</a></li>
+                            <li><a href="#">HİZMET 1</a></li>
+                            <li><a href="#">HİZMET 2</a></li>
+                            <li><a href="#">HİZMET 3</a></li>
+                            <li><a href="#">HİZMET 4</a></li>
                         </ul>
                     </div>
                 </div>
-
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="footer__address">
-                        <h6>İletişim</h6>
-                        <p>Kazım Özalp Mahalesi Rabat Sokak No: 24 / 3 <br /> Kavaklıdere - Çankaya - Ankara - Türkiye
+                        <h6>İLETİŞİM </h6>
+                        <p>Kavaklıdere/Çankaya - Ankara,Türkiye
+                            <br /> Kazım Özalp Mahalesi Rabat Sokak No: 24 / 3
                         </p>
                         <ul>
-                            <li>info@ayzinsaat.com</li>
-                            <li>+84 123 456 789</li>
+                            <li>Info.@gmail.com</li>
+                            <li>90 (312) 491 69 12</li>
                         </ul>
                     </div>
                 </div>
@@ -209,18 +246,18 @@
                 <div class="row">
                     <div class="col-lg-8 col-md-7">
                         <div class="copyright__text">
-                            <p>Copyright ©
+                            <p>Telif hakkı ©
                                 <script>
                                     document.write(new Date().getFullYear());
-                                </script> All rights reserved | This website is made with by <a href="tual.com"
-                                    target="_blank">TU & AL</a>
+                                </script> Tüm hakları saklıdır | <i aria-hidden="true"></i> <a href="#">TU & AL</a>
+                                tarafından yapılmıştır
                             </p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-5">
                         <div class="copyright__widget">
-                            <a href="#">Terms of use</a>
-                            <a href="#">Privacy Policy</a>
+                            <a href="#">Kullanım Şartları</a>
+                            <a href="#">Gizlilik Politikası</a>
                         </div>
                     </div>
                 </div>
@@ -228,7 +265,6 @@
         </div>
     </footer>
     <!-- Footer Section End -->
-
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
