--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Staging Template">
-    <meta name="keywords" content="Staging, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AYZ İNŞAAT</title>
@@ -38,7 +36,7 @@
         </div>
         <div id="mobile-menu-wrap"></div>
         <div class="offcanvas__widget">
-            <a href="indexEn.html">
+            <a href="about.html">
                 <img src="img/tr.png" alt="Türk Bayrağı" style="width:100px; margin-left: -20px; margin-top: -30px; ">
             </a>
         </div>
@@ -54,28 +52,36 @@
                         <a href="#"><img src="img/logo.png" alt=""></a>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-8">
                     <nav class="header__menu mobile-menu">
                         <ul>
                             <li class="active"><a href="./index.html">Anasayfa</a></li>
                             <li><a href="./about.html">Hakkımızda</a></li>
-                            <li><a href="./galeri.html">Galeri</a></li>
-                            <li><a href="#">Pages</a>
+                            <li><a href="#">Makine Parkı ve Galeri</a>
                                 <ul class="dropdown">
-                                    <li><a href="./Project-details.html">Project Details</a></li>
-                                    <li><a href="./about.html">About</a></li>
-                                    <li><a href="./services.html">Services</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
+                                    <li><a href="#">Makine Parkı</a></li>
+                                    <li><a href="galeri.html">Galeri</a></li>
                                 </ul>
                             </li>
-                            <li><a href="./blog.html">Basında Biz</a></li>
+                            <li><a href="#">Projeler</a>
+                                <ul class="dropdown">
+                                    <li><a href="./Project-details.html">Projeler </a></li>
+                                    <li><a href="./services.html">hizmetlerimiz</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Basında Biz</a>
+                                <ul class="dropdown">
+                                    <li><a href="/AYZ-/blog.html">Haberler</a></li>
+                                    <li><a href="./blog-details.html">Bülten</a></li>
+                                </ul>
+                            </li>
                             <li><a href="./contact.html">İletişim</a></li>
                         </ul>
                     </nav>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-1">
                     <div class="header__widget">
-                        <a href="indexEn.html">
+                        <a href="about.html">
                             <img src="img/tr.png" alt="Türk Bayrağı" style="width:100px; ">
                         </a>
                     </div>
@@ -100,8 +106,8 @@
           ">
                 <div class="hero__text">
                     <h2>Quality is not only our standard.</h2>
-                    <a href="#" class="primary-btn" style="background-color: rgba(97, 95, 95, 0.692);">Daha Fazla</a>
-                    <a href="#" class="more_btn">Daha Fazla</a>
+                    <a href="#" class="primary-btn" style="background-color: rgb(0, 0, 0);">Hakkımızda</a>
+                    <a href="#" class="more_btn">Discover more</a>
                     <div class="hero__social">
                         <a href="#"><i class="fa fa-facebook"></i></a>
                         <a href="#"><i class="fa fa-twitter"></i></a>
@@ -121,8 +127,8 @@
           ">
                 <div class="hero__text">
                     <h2>Quality is not only our standard.</h2>
-                    <a href="#" class="primary-btn" style="background-color: rgba(97, 95, 95, 0.692);">Daha Fazla</a>
-                    <a href="#" class="more_btn">Daha Fazla</a>
+                    <a href="#" class="primary-btn" style="background-color: rgb(0, 0, 0);">Basında Biz</a>
+                    <a href="#" class="more_btn">Discover more</a>
                     <div class="hero__social">
                         <a href="#"><i class="fa fa-facebook"></i></a>
                         <a href="#"><i class="fa fa-twitter"></i></a>
@@ -145,22 +151,24 @@
                 <div class="col-lg-6">
                     <div class="about__text">
                         <div class="section-title">
-                            <span>who are we</span>
-                            <h2>Lorem ipsum dolor sit amet.</h2>
+                            <span>AYZ İNŞAAT</span>
+                            <h2>Güven ve Kalite ile
+                                Geleceği İnşa Ediyoruz</h2>
                         </div>
                         <div class="about__para__text">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi rerum ipsa consectetur..
-                            </p>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod expedita asperiores
-                                ducimus culpa incidunt.</p>
+                            <p>Metasurfaces are generally designed by placing scatterers in periodic or pseudo-periodic
+                                grids. We propose and discuss design rules for functional metasurfaces with randomly
+                                placed.</p>
+                            <p>Anisotropic elements that randomly sample. Quisque sit amet nisl ante. Fusce lacinia non
+                                tellus id gravida. Cras neque dolor, volutpat et hendrerit et.</p>
                         </div>
-                        <a href="#" class="primary-btn normal-btn">Daha Fazla</a>
+                        <a href="#" class="primary-btn normal-btn">Daha Fazlası</a>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="about__pic">
                         <div class="about__pic__inner">
-                            <img src="img/ayz/ates-insaat-galeri.jpg" height="550px" width="450px" style=" background-size: cover;
+                            <img src="img/ayz/ates-insaat-01.jpg" height="550px" width="450px" style=" background-size: cover;
                             background-position: center;">
                         </div>
                     </div>
@@ -183,8 +191,8 @@
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-10 text-center">
                     <div class="callto__text">
-                        <span>Lorem, ipsum dolor.</span>
-                        <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                        <span>Why choose us?</span>
+                        <h2>Our Ability To Deliver Outstanding Results For Our Clients Starts With Our Team Of Smart.
                         </h2>
                         <a href="contact.html" class="primary-btn">İletişim</a>
                     </div>
@@ -196,35 +204,29 @@
     <!-- Call To Action Section End -->
 
     <!-- Testimonial Section Begin -->
-    <section class="testimonial spad"
-        style="margin-bottom: -200px; margin-top: -50px; background-image: url('img/testimonial/testimonial-bg.jpg');">
+    <section class="testimonial spad " style="margin-bottom: -200px; margin-top: -50px; ">
+
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="logo__carousel owl-carousel">
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/ayz/Referanslar/logo-abb.png" alt=""
-                                    style="width: 150px; height: auto;"></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-abb.png" alt=""></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/ayz/Referanslar/logo-aski.png" alt=""
-                                    style="width: 150px; height: auto;"></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-aski.png" alt=""></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/ayz/Referanslar/logo-cumhurbaskanligi.png" alt=""
-                                    style="width: 150px; height: auto;"></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-cumhurbaskanligi.png" alt=""></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/ayz/Referanslar/logo-hab.png" alt=""
-                                    style="width: 150px; height: auto;"></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-hab.png" alt=""></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/ayz/Referanslar/logo-meb.png" alt=""
-                                    style="width: 150px; height: auto;"></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-meb.png" alt=""></a>
                         </div>
                         <div class="logo__carousel__item">
-                            <a href="#"><img src="img/ayz/Referanslar/logo-aso.png" alt=""
-                                    style="width: 150px; height: auto;"></a>
+                            <a href="#"><img src="img/ayz/Referanslar/logo-aso.png" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -242,19 +244,21 @@
     <!-- Latest Section End -->
 
     <!-- Footer Section Begin -->
-    <footer class="footer set-bg">
+    <footer class="footer set-bg" data-setbg="img/footer-bg.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="#">LOGO</a>
+                            <a href="#"><img src="img/logo.png" alt=""></a>
                         </div>
-                        <p>Kazım Özalp Mahalesi Rabat Sokak No: 24 / 3 <br /> Kavaklıdere - Çankaya - Ankara - Türkiye
+                        <p>AYZ İnşaat, kaliteli ve güvenilir hizmet anlayışımızla,
+
+                            <br />müşterilerimizin ihtiyaçlarına yönelik çözümler sunuyoruz. Modern tekniklerle,
+                            güvenilir alt yapı projeleri gerçekleştiriyoruz.
                         </p>
                         <ul>
-                            <li>info@ayzinsaat.com</li>
-                            <li>+84 123 456 789</li>
+
                         </ul>
                         <div class="footer__social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
@@ -266,34 +270,38 @@
                 </div>
                 <div class="col-lg-2 offset-lg-1 col-md-3 col-sm-6">
                     <div class="footer__widget">
-                        <h6>Site Haritası</h6>
+                        <h6>SİTE HARİTASI</h6>
                         <ul>
-                            <li><a href="#">Anasayfa</a></li>
-                            <li><a href="#">Hakkımızda</a></li>
-                            <li><a href="#">Galeri</a></li>
-                            <li><a href="#">Projeler</a></li>
-                            <li><a href="#">İletişim</a></li>
+                            <li><a href="#">ANASAYFA</a></li>
+                            <li><a href="#">HAKKIMIZDA</a></li>
+                            <li><a href="#">MAKİNE PARKI</a></li>
+                            <li><a href="#">GALERİ</a></li>
+                            <li><a href="#">PROJELER</a></li>
+                            <li><a href="#">İLETİŞİM</a></li>
+
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-6">
                     <div class="footer__widget">
-                        <h6>Basında Biz</h6>
+                        <h6>HİZMETLER</h6>
                         <ul>
-                            <li><a href="#">Haberler</a></li>
-                            <li><a href="#">Basın Bültenleri</a></li>
+                            <li><a href="#">HİZMET 1</a></li>
+                            <li><a href="#">HİZMET 2</a></li>
+                            <li><a href="#">HİZMET 3</a></li>
+                            <li><a href="#">HİZMET 4</a></li>
                         </ul>
                     </div>
                 </div>
-
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="footer__address">
-                        <h6>İletişim</h6>
-                        <p>Kazım Özalp Mahalesi Rabat Sokak No: 24 / 3 <br /> Kavaklıdere - Çankaya - Ankara - Türkiye
+                        <h6>İLETİŞİM </h6>
+                        <p>Kavaklıdere/Çankaya - Ankara,Türkiye
+                            <br /> Kazım Özalp Mahalesi Rabat Sokak No: 24 / 3
                         </p>
                         <ul>
-                            <li>info@ayzinsaat.com</li>
-                            <li>+84 123 456 789</li>
+                            <li>Info.@gmail.com</li>
+                            <li>90 (312) 491 69 12</li>
                         </ul>
                     </div>
                 </div>
@@ -302,24 +310,25 @@
                 <div class="row">
                     <div class="col-lg-8 col-md-7">
                         <div class="copyright__text">
-                            <p>Copyright ©
+                            <p>Telif hakkı ©
                                 <script>
                                     document.write(new Date().getFullYear());
-                                </script> All rights reserved | This website is made with by <a href="tual.com"
-                                    target="_blank">TU & AL</a>
+                                </script> Tüm hakları saklıdır | <i aria-hidden="true"></i> <a href="#">TU & AL</a>
+                                tarafından yapılmıştır
                             </p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-5">
                         <div class="copyright__widget">
-                            <a href="#">Terms of use</a>
-                            <a href="#">Privacy Policy</a>
+                            <a href="#">Kullanım Şartları</a>
+                            <a href="#">Gizlilik Politikası</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
+
     <!-- Footer Section End -->
 
     <!-- Js Plugins -->
