--- a/indexEn.html
+++ b/indexEn.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Staging Template">
-    <meta name="keywords" content="Staging, unica, creative, html">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AYZ İNŞAAT</title>
@@ -250,20 +249,21 @@
     <!-- Latest Section End -->
 
     <!-- Footer Section Begin -->
-    <footer class="footer set-bg">
+    <footer class="footer set-bg" data-setbg="img/footer-bg.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="#">LOGO<img src="img/ayz/LOGO.png" alt=""></a>
+                            <a href="#"><img src="img/logo.png" alt=""></a>
                         </div>
-                        <p>Kazım Özalp Neighborhood, Rabat Street No: 24 / 3 <br /> Kavaklıdere - Çankaya - Ankara -
-                            Turkey
+                        <p>AYZ İnşaat, kaliteli ve güvenilir hizmet anlayışımızla,
+
+                            <br />müşterilerimizin ihtiyaçlarına yönelik çözümler sunuyoruz. Modern tekniklerle,
+                            güvenilir alt yapı projeleri gerçekleştiriyoruz.
                         </p>
                         <ul>
-                            <li>info@ayzinsaat.com</li>
-                            <li>+84 123 456 789</li>
+
                         </ul>
                         <div class="footer__social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
@@ -275,35 +275,38 @@
                 </div>
                 <div class="col-lg-2 offset-lg-1 col-md-3 col-sm-6">
                     <div class="footer__widget">
-                        <h6>Site Map</h6>
+                        <h6>SİTE HARİTASI</h6>
                         <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Gallery</a></li>
-                            <li><a href="#">Projects</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="#">ANASAYFA</a></li>
+                            <li><a href="#">HAKKIMIZDA</a></li>
+                            <li><a href="#">MAKİNE PARKI</a></li>
+                            <li><a href="#">GALERİ</a></li>
+                            <li><a href="#">PROJELER</a></li>
+                            <li><a href="#">İLETİŞİM</a></li>
+
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-6">
                     <div class="footer__widget">
-                        <h6>News</h6>
+                        <h6>HİZMETLER</h6>
                         <ul>
-                            <li><a href="#">AYZ Construction in Media</a></li>
-                            <li><a href="#">News from Us</a></li>
+                            <li><a href="#">HİZMET 1</a></li>
+                            <li><a href="#">HİZMET 2</a></li>
+                            <li><a href="#">HİZMET 3</a></li>
+                            <li><a href="#">HİZMET 4</a></li>
                         </ul>
                     </div>
                 </div>
-
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="footer__address">
-                        <h6>Contact</h6>
-                        <p>Kazım Özalp Neighborhood, Rabat Street No: 24 / 3 <br /> Kavaklıdere - Çankaya - Ankara -
-                            Turkey
+                        <h6>İLETİŞİM </h6>
+                        <p>Kavaklıdere/Çankaya - Ankara,Türkiye
+                            <br /> Kazım Özalp Mahalesi Rabat Sokak No: 24 / 3
                         </p>
                         <ul>
-                            <li>info@ayzinsaat.com</li>
-                            <li>+84 123 456 789</li>
+                            <li>Info.@gmail.com</li>
+                            <li>90 (312) 491 69 12</li>
                         </ul>
                     </div>
                 </div>
@@ -312,18 +315,18 @@
                 <div class="row">
                     <div class="col-lg-8 col-md-7">
                         <div class="copyright__text">
-                            <p>Copyright ©
+                            <p>Telif hakkı ©
                                 <script>
                                     document.write(new Date().getFullYear());
-                                </script> All rights reserved | This website is made with by <a href="tual.com"
-                                    target="_blank">TU & AL</a>
+                                </script> Tüm hakları saklıdır | <i aria-hidden="true"></i> <a href="#">TU & AL</a>
+                                tarafından yapılmıştır
                             </p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-5">
                         <div class="copyright__widget">
-                            <a href="#">Terms of use</a>
-                            <a href="#">Privacy Policy</a>
+                            <a href="#">Kullanım Şartları</a>
+                            <a href="#">Gizlilik Politikası</a>
                         </div>
                     </div>
                 </div>
