--- a/services.html
+++ b/services.html
@@ -3,8 +3,6 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Staging Template">
-    <meta name="keywords" content="Staging, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AYZ İNŞAAT</title>
@@ -53,29 +51,38 @@
                         <a href="#"><img src="img/logo.png" alt=""></a>
                     </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-8">
                     <nav class="header__menu mobile-menu">
                         <ul>
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="./about.html">About</a></li>
-                            <li><a href="./galeri.html">Galeri</a></li>
-                            <li><a href="#">Pages</a>
+                            <li><a href="./index.html">Anasayfa</a></li>
+                            <li><a href="./about.html">Hakkımızda</a></li>
+                            <li><a href="#">Makine Parkı ve Galeri</a>
                                 <ul class="dropdown">
-                                    <li><a href="./Project-details.html">Project Details</a></li>
-                                    <li><a href="./about.html">About</a></li>
-                                    <li><a href="./services.html">Services</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
+                                    <li><a href="#">Makine Parkı</a></li>
+                                    <li><a href="galeri.html">Galeri</a></li>
                                 </ul>
                             </li>
-                            <li><a href="./blog.html">Blog</a></li>
-                            <li><a href="./contact.html">Contact</a></li>
+                            <li class="active"><a href="#">Projeler</a>
+                                <ul class="dropdown">
+                                    <li><a href="./Project-details.html">Projeler </a></li>
+                                    <li><a href="./services.html">hizmetlerimiz</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Basında Biz</a>
+                                <ul class="dropdown">
+                                    <li><a href="/AYZ-/blog.html">Haberler</a></li>
+                                    <li><a href="./blog-details.html">Bülten</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="./contact.html">İletişim</a></li>
                         </ul>
                     </nav>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-1">
                     <div class="header__widget">
-                        <span>Call us for any questions</span>
-                        <h4>+01 123 456 789</h4>
+                        <a href="about.html">
+                            <img src="img/tr.png" alt="Türk Bayrağı" style="width:100px; ">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -85,21 +92,29 @@
     <!-- Header Section End -->
 
     <!-- Breadcrumb Section Begin -->
-    <div class="breadcrumb-option spad set-bg" data-setbg="img/breadcrumb-bg.jpg">
+    <div class="breadcrumb-option spad" style="
+    background: linear-gradient(
+        rgba(0, 0, 0, 0.4),
+        rgba(0, 0, 0, 0.4)
+      ),
+      url(img/ayz/ates-insaat-12.jpg);
+    background-size: cover;
+    background-position: center;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="breadcrumb__text">
-                        <h2>Our Services</h2>
+                        <h2>Projeler</h2>
                         <div class="breadcrumb__links">
-                            <a href="./index.html">Home</a>
-                            <span>Our Services</span>
+                            <a href="./index.html">ANASAYFA</a>
+                            <span>Projeler</span>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
     <!-- Breadcrumb Section End -->
 
     <!-- Services Section Begin -->
@@ -108,8 +123,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="section-title">
-                        <span>Our specialization</span>
-                        <h2>What we do</h2>
+                        <span>AYZ İNŞAAT</span>
+                        <h2>Ne yapıyoruz</h2>
                     </div>
                 </div>
             </div>
@@ -117,62 +132,62 @@
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="services__item">
                         <img src="img/services/services-1.png" alt="">
-                        <h4>Interior Design</h4>
-                        <p>As you might expect of a company that began as a high-end interiors contractor, we pay strict
-                            attention.</p>
+                        <h4>Altyapı Projeleri</h4>
+                        <p>Altyapı projelerinde geniş deneyime sahip olan firmamız, kaliteli ve güvenilir hizmet
+                            sunmaktadır.</p>
                         <ul>
-                            <li>- Energy allocation.</li>
-                            <li>- Fire protection, safety</li>
-                            <li>- Lifts and escalators.</li>
-                            <li>- Facade engineering.</li>
+                            <li>- Yol yapımı ve onarımı.</li>
+                            <li>- Su ve kanalizasyon sistemleri.</li>
+                            <li>- Elektrik altyapısı.</li>
+                            <li>- Telekomünikasyon altyapısı.</li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="services__item">
                         <img src="img/services/services-2.png" alt="">
-                        <h4>Office Design</h4>
-                        <p>Our commitment to exceptional quality has never wavered. To day ranks as one of the most
-                            highly-regarded construction.</p>
+                        <h4>Proje Yönetimi</h4>
+                        <p>Proje süreçlerini etkin bir şekilde yöneterek, zamanında ve bütçeye uygun teslimat
+                            sağlıyoruz.</p>
                         <ul>
-                            <li>- Active system.</li>
-                            <li>- Air conditioning.</li>
-                            <li> -BSRIA blue book.</li>
-                            <li>- Building services engineer.</li>
+                            <li>- Proje planlaması.</li>
+                            <li>- Kaynak yönetimi.</li>
+                            <li>- Kalite kontrol.</li>
+                            <li>- Risk analizi.</li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="services__item">
                         <img src="img/services/services-3.png" alt="">
-                        <h4>Home Design</h4>
-                        <p>Interdisciplinary architectural studio with cultural, residential and commercial projects
-                            built worldwide.</p>
+                        <h4>Yapısal Çözümler</h4>
+                        <p>Altyapı projeleri için dayanıklı ve sürdürülebilir yapısal çözümler sunuyoruz.</p>
                         <ul>
-                            <li>- Pipework.</li>
-                            <li>- Plant room.</li>
-                            <li> - Plumbing.</li>
-                            <li>- Rules of Thumb</li>
+                            <li>- Temel inşaatı.</li>
+                            <li>- Betonarme yapılar.</li>
+                            <li>- Geoteknik mühendislik.</li>
+                            <li>- Stabilite analizleri.</li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="services__item">
                         <img src="img/services/services-4.png" alt="">
-                        <h4>Design drawing</h4>
-                        <p>Creating architectural and creative solutions to help people realize their vision and make
-                            them a reality.</p>
+                        <h4>Altyapı Bakım ve Onarım</h4>
+                        <p>Altyapı sistemlerinin uzun ömürlü olmasını sağlamak için bakım ve onarım hizmetleri
+                            sunuyoruz.</p>
                         <ul>
-                            <li>- Guidelines for building.</li>
-                            <li>- Thermal comfort.</li>
-                            <li>- Types of building services.</li>
-                            <li>- Types of heating system.</li>
+                            <li>- Yol ve köprü bakımı.</li>
+                            <li>- Su ve kanalizasyon hatlarının yenilenmesi.</li>
+                            <li>- Elektrik ve telekom altyapısının bakımı.</li>
                         </ul>
+
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
     <!-- Services Section End -->
 
     <!-- Counter Section End -->
@@ -226,57 +241,23 @@
     </section>
     <!-- Counter Section End -->
 
-    <!-- Client Section Begin -->
-    <section class="clients spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5 col-md-5">
-                    <div class="section-title">
-                        <span>Branding</span>
-                        <h2>Our Clients</h2>
-                    </div>
-                </div>
-                <div class="col-lg-7 col-md-7">
-                    <div class="row">
-                        <div class="col-lg-4 col-md-4 col-sm-4">
-                            <a href="#"><img src="img/logo/logo-1.png" alt=""></a>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4">
-                            <a href="#"><img src="img/logo/logo-2.png" alt=""></a>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4">
-                            <a href="#"><img src="img/logo/logo-3.png" alt=""></a>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4">
-                            <a href="#"><img src="img/logo/logo-4.png" alt=""></a>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4">
-                            <a href="#"><img src="img/logo/logo-3.png" alt=""></a>
-                        </div>
-                        <div class="col-lg-4 col-md-4 col-sm-4">
-                            <a href="#"><img src="img/logo/logo-5.png" alt=""></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Client Section End -->
 
     <!-- Footer Section Begin -->
-    <footer class="footer set-bg">
+    <footer class="footer set-bg" data-setbg="img/footer-bg.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__logo">
-                            <a href="#">LOGO<img src="img/ayz/LOGO.png" alt=""></a>
+                            <a href="#"><img src="img/logo.png" alt=""></a>
                         </div>
-                        <p>Kazım Özalp Mahalesi Rabat Sokak No: 24 / 3 <br /> Kavaklıdere - Çankaya - Ankara - Türkiye
+                        <p>AYZ İnşaat, kaliteli ve güvenilir hizmet anlayışımızla,
+
+                            <br />müşterilerimizin ihtiyaçlarına yönelik çözümler sunuyoruz. Modern tekniklerle,
+                            güvenilir alt yapı projeleri gerçekleştiriyoruz.
                         </p>
                         <ul>
-                            <li>info@ayzinsaat.com</li>
-                            <li>+84 123 456 789</li>
+
                         </ul>
                         <div class="footer__social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
@@ -288,34 +269,38 @@
                 </div>
                 <div class="col-lg-2 offset-lg-1 col-md-3 col-sm-6">
                     <div class="footer__widget">
-                        <h6>Site Haritası</h6>
+                        <h6>SİTE HARİTASI</h6>
                         <ul>
-                            <li><a href="#">Anasayfa</a></li>
-                            <li><a href="#">Hakkımızda</a></li>
-                            <li><a href="#">Galeri</a></li>
-                            <li><a href="#">Projeler</a></li>
-                            <li><a href="#">İletişim</a></li>
+                            <li><a href="#">ANASAYFA</a></li>
+                            <li><a href="#">HAKKIMIZDA</a></li>
+                            <li><a href="#">MAKİNE PARKI</a></li>
+                            <li><a href="#">GALERİ</a></li>
+                            <li><a href="#">PROJELER</a></li>
+                            <li><a href="#">İLETİŞİM</a></li>
+
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-2 col-md-3 col-sm-6">
                     <div class="footer__widget">
-                        <h6>Basında Biz</h6>
+                        <h6>HİZMETLER</h6>
                         <ul>
-                            <li><a href="#">Haberler</a></li>
-                            <li><a href="#">Basın Bültenleri</a></li>
+                            <li><a href="#">HİZMET 1</a></li>
+                            <li><a href="#">HİZMET 2</a></li>
+                            <li><a href="#">HİZMET 3</a></li>
+                            <li><a href="#">HİZMET 4</a></li>
                         </ul>
                     </div>
                 </div>
-
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="footer__address">
-                        <h6>İletişim</h6>
-                        <p>Kazım Özalp Mahalesi Rabat Sokak No: 24 / 3 <br /> Kavaklıdere - Çankaya - Ankara - Türkiye
+                        <h6>İLETİŞİM </h6>
+                        <p>Kavaklıdere/Çankaya - Ankara,Türkiye
+                            <br /> Kazım Özalp Mahalesi Rabat Sokak No: 24 / 3
                         </p>
                         <ul>
-                            <li>info@ayzinsaat.com</li>
-                            <li>+84 123 456 789</li>
+                            <li>Info.@gmail.com</li>
+                            <li>90 (312) 491 69 12</li>
                         </ul>
                     </div>
                 </div>
@@ -324,18 +309,18 @@
                 <div class="row">
                     <div class="col-lg-8 col-md-7">
                         <div class="copyright__text">
-                            <p>Copyright ©
+                            <p>Telif hakkı ©
                                 <script>
                                     document.write(new Date().getFullYear());
-                                </script> All rights reserved | This website is made with by <a href="tual.com"
-                                    target="_blank">TU & AL</a>
+                                </script> Tüm hakları saklıdır | <i aria-hidden="true"></i> <a href="#">TU & AL</a>
+                                tarafından yapılmıştır
                             </p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-5">
                         <div class="copyright__widget">
-                            <a href="#">Terms of use</a>
-                            <a href="#">Privacy Policy</a>
+                            <a href="#">Kullanım Şartları</a>
+                            <a href="#">Gizlilik Politikası</a>
                         </div>
                     </div>
                 </div>
@@ -343,7 +328,6 @@
         </div>
     </footer>
     <!-- Footer Section End -->
-
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
